samples/_failures_safe/1761327873_3ad47f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cc4aca63.c:147:1: error: expected identifier or ‘(’ at end of input
  147 | int
      | ^~~
